Bug fixes and update in carving: super and sub calls chain their INIT method which are always subsumed. Fixed broken tests after changing the traces.